kubernetes/dev/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-test
spec:
  rules:
  - host: "nginx.learningpurposestore.store"
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webapp-service
              port:
                number: 8090
